--- a/materi_webgis.html
+++ b/materi_webgis.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Materi WebGIS</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Hero Gambar + Kontainer Animasi</title>
+
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
   <style>
-    * {
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body, html { height: 100%; font-family: 'Poppins', sans-serif; overflow: hidden; }
+
+     * {
       box-sizing: border-box;
     }
 
@@ -22,8 +27,8 @@
       min-height: 100vh;
     }
 
-    #materiWebGIS {
-      max-width: 1000px; /* Diperbesar dari 960px */
+    #infoContainer {
+      max-width: 1000px;
       margin: 40px;
       background: #fff;
       padding: 50px;
@@ -106,12 +111,253 @@
       h4 {
         font-size: 1.2em;
       }
+    } /* <-- Ini yang hilang, tanda tutup kurung */
+
+    .hero {
+      position: relative;
+      width: 100%;
+      height: 100vh;
+      overflow: hidden;
+    }
+
+    .hero img.bg {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 1;
+    }
+
+    .main-title {
+      position: relative;
+      z-index: 2;
+      text-align: center;
+      font-size: 48px;
+      font-weight: 600;
+      color: white;
+      text-shadow: 2px 2px 8px rgba(0,0,0,0.5);
+      margin-top: 40px;
+      animation: fadeInDown 1.5s ease-out forwards;
+      opacity: 0;
+    }
+
+    @keyframes fadeInDown {
+      0% { opacity: 0; transform: translateY(-30px); }
+      100% { opacity: 1; transform: translateY(0); }
+    }
+
+    .container-wrapper {
+      position: relative;
+      z-index: 2;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-wrap: wrap;
+      gap: 30px;
+      padding: 40px;
+      height: calc(100% - 100px);
+    }
+
+    .box {
+      background: linear-gradient(135deg, #ffffff, #f0f0f0);
+      border: 2px solid #e0e0e0;
+      width: 250px;
+      height: 250px;
+      border-radius: 16px;
+      color: #333;
+      font-size: 20px;
+      font-weight: 600;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      box-shadow: 0 6px 15px rgba(0,0,0,0.1);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      opacity: 0;
+      transform: translateY(50px);
+      animation: fadeUp 1s ease-out forwards;
+      cursor: pointer;
+      flex-direction: column;
+      text-decoration: none;
+    }
+
+    .box:hover {
+      transform: translateY(-10px) scale(1.05);
+      box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+    }
+
+    .box:nth-child(1) { animation-delay: 0.2s; }
+    .box:nth-child(2) { animation-delay: 0.4s; }
+    .box:nth-child(3) { animation-delay: 0.6s; }
+
+    @keyframes fadeUp {
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    .icon {
+      width: 100px;
+      height: auto;
+      margin-bottom: 12px;
+    }
+
+    .box div {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .box div::after {
+      content: attr(data-label);
+      font-size: 18px;
+      color: #2c3e50;
+      margin-top: 10px;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+    }
+
+    @media (max-width: 768px) {
+      .container-wrapper { flex-direction: column; }
+      .box { width: 80%; }
+      .main-title { font-size: 32px; margin-top: 20px; }
+    }
+
+    #anggota-container {
+      position: absolute;
+      bottom: -100%;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(255,255,255,0.95);
+      transition: bottom 0.5s ease;
+      z-index: 3;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 40px 20px;
+      text-align: left;
+      overflow-y: auto;
+    }
+
+    #anggota-container.show { bottom: 0; }
+
+    .anggota-box {
+      max-width: 600px;
+      background: white;
+      border-radius: 12px;
+      padding: 30px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+      color: #333;
+    }
+
+    .anggota-box h2 {
+      margin-bottom: 20px;
+      font-size: 24px;
+      color: #2c3e50;
+      text-align: center;
+    }
+
+    .anggota-box ol {
+      padding-left: 20px;
+      line-height: 1.8;
+    }
+
+    .close-btn {
+      margin-top: 30px;
+      padding: 10px 20px;
+      background-color: #2c3e50;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+
+    .close-btn:hover {
+      background-color: #1a242f;
+    }
+
+    .modal-container {
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
+      background: white;
+      z-index: 4;
+      display: none;
+      flex-direction: column;
+      padding: 20px;
+      overflow-y: auto;
+    }
+
+    .modal-container.show { display: flex; }
+
+    .modal-container .close-btn {
+      align-self: flex-end;
+      margin-bottom: 10px;
+    }
+
+    .modal-container iframe {
+      flex-grow: 1;
+      width: 100%;
+      height: 100%;
+      border: none;
+      border-radius: 10px;
     }
   </style>
 </head>
 <body>
-  <div id="materiWebGIS">
-    <h3>Materi Lengkap Seputar WebGIS</h3>
+
+  <div class="hero">
+    <img src="img/nature2.jpg" alt="Latar belakang alam" class="bg" />
+    <h1 class="main-title">Peta tempat Makanan</h1>
+
+    <div class="container-wrapper" id="main-container">
+      <!-- Informasi -->
+      <div class="box" id="btnInformasi">
+        <div data-label="Informasi">
+          <img src="img/icon3.png" alt="Ikon Informasi" class="icon" />
+        </div>
+      </div>
+
+      <!-- Lihat Peta -->
+      <div class="box" id="btnPeta">
+        <div data-label="Lihat Peta">
+          <img src="img/icon2.png" alt="Ikon Peta" class="icon" />
+        </div>
+      </div>
+
+      <!-- Daftar Anggota -->
+      <div class="box" id="btnAnggota">
+        <div data-label="Daftar Anggota">
+          <img src="img/icon1.png" alt="Ikon Anggota" class="icon" />
+        </div>
+      </div>
+    </div>
+
+    <!-- Anggota -->
+    <div id="anggota-container">
+      <div class="anggota-box">
+        <h2>Daftar Anggota</h2>
+        <ol>
+          <li>Yohanes A. Dewa De Yanputra - 51230169</li>
+          <li>Joshua F. Bere - 51230146</li>
+          <li>Oscarito R. Panie - 51230155</li>
+          <li>Roswitha Urbaningsi Tes Bele - 51230160</li>
+          <li>Puja Samuel Joiz Napu – 51230158</li>
+          <li>Yoseph Efrem Heka - 51230172</li>
+        </ol>
+        <button class="close-btn" onclick="tutupAnggota()">Tutup</button>
+      </div>
+    </div>
+
+      <!-- Modal Informasi -->
+    <div class="modal-container" id="infoContainer">
+      <button class="close-btn" onclick="tutupModal('infoContainer')">Tutup</button>
+      <div style="flex-grow: 1; overflow-y: auto;">
+        <h3>Materi Lengkap Seputar WebGIS</h3>
+
     <h4>1. Pengertian WebGIS</h4>
     <p>WebGIS (Web Geographic Information System) adalah sistem informasi geografis yang berjalan melalui web browser dan memungkinkan pengguna mengakses dan menganalisis data spasial dari mana saja.</p>
 
@@ -181,6 +427,58 @@
 
     <h5>4.3. WCS (Web Coverage Service)</h5>
     <p>Menyediakan data raster seperti citra satelit.</p>
-  </div>
+      </div>
+    </div>
+
+    <!-- Modal Lihat Peta -->
+    <div class="modal-container" id="webgisContainer">
+      <button class="close-btn" onclick="tutupModal('webgisContainer')">Tutup</button>
+      <iframe src="WEBGIS.html" title="Halaman WEBGIS"></iframe>
+    </div>
+
+  </div> <!-- akhir .hero -->
+
+  <script>
+    const btnInformasi = document.getElementById('btnInformasi');
+    const btnPeta = document.getElementById('btnPeta');
+    const btnAnggota = document.getElementById('btnAnggota');
+
+    const mainContainer = document.getElementById('main-container');
+    const anggotaContainer = document.getElementById('anggota-container');
+    const infoContainer = document.getElementById('infoContainer');
+    const webgisContainer = document.getElementById('webgisContainer');
+
+    btnInformasi.addEventListener('click', () => {
+      mainContainer.style.display = 'none';
+      anggotaContainer.classList.remove('show');
+      webgisContainer.classList.remove('show');
+      infoContainer.classList.add('show');
+    });
+
+    btnPeta.addEventListener('click', () => {
+      mainContainer.style.display = 'none';
+      anggotaContainer.classList.remove('show');
+      infoContainer.classList.remove('show');
+      webgisContainer.classList.add('show');
+    });
+
+    btnAnggota.addEventListener('click', () => {
+      mainContainer.style.display = 'none';
+      infoContainer.classList.remove('show');
+      webgisContainer.classList.remove('show');
+      anggotaContainer.classList.add('show');
+    });
+
+    function tutupAnggota() {
+      anggotaContainer.classList.remove('show');
+      mainContainer.style.display = 'flex';
+    }
+
+    function tutupModal(id) {
+      document.getElementById(id).classList.remove('show');
+      mainContainer.style.display = 'flex';
+    }
+  </script>
+
 </body>
 </html>
