--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <p class="fade-in-up">Peta Ini – Siap mengantarmu kemana saja.</p>
 
       <!-- Tombol Masuk -->
-      <a href="halamanku.html" class="btn btn-primary btn-lg mt-5 btn-masuk fade-in-up">Masuk</a>
+      <a href="materi_webgis" class="btn btn-primary btn-lg mt-5 btn-masuk fade-in-up">Masuk</a>
     </div>
   </div>
 
