--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <body>
 
   <div class="hero">
-    <img src="img/nature.jpg" alt="Bus interior">
+    <img src="nature.jpg" alt="Bus interior">
     <div class="text-overlay">
       <div class="logo-style">Peta Tempat Makan</div>
       <h1 class="fade-in-up">Hai kamu, mau ke mana?</h1>
