--- a/materi_webgis.html
+++ b/materi_webgis.html
@@ -310,28 +310,28 @@
 <body>
 
   <div class="hero">
-    <img src="img/nature2.jpg" alt="Latar belakang alam" class="bg" />
+    <img src="nature2.jpg" alt="Latar belakang alam" class="bg" />
     <h1 class="main-title">Peta tempat Makanan</h1>
 
     <div class="container-wrapper" id="main-container">
       <!-- Informasi -->
       <div class="box" id="btnInformasi">
         <div data-label="Informasi">
-          <img src="img/icon3.png" alt="Ikon Informasi" class="icon" />
+          <img src="icon3.png" alt="Ikon Informasi" class="icon" />
         </div>
       </div>
 
       <!-- Lihat Peta -->
       <div class="box" id="btnPeta">
         <div data-label="Lihat Peta">
-          <img src="img/icon2.png" alt="Ikon Peta" class="icon" />
+          <img src="icon2.png" alt="Ikon Peta" class="icon" />
         </div>
       </div>
 
       <!-- Daftar Anggota -->
       <div class="box" id="btnAnggota">
         <div data-label="Daftar Anggota">
-          <img src="img/icon1.png" alt="Ikon Anggota" class="icon" />
+          <img src="icon1.png" alt="Ikon Anggota" class="icon" />
         </div>
       </div>
     </div>
