--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
       animation: fadeInUp 2s ease-out forwards;
     }
 
-    /* Styling tombol */
     .btn-masuk {
       padding: 0.75rem 2rem;
       font-size: 1.2rem;
@@ -78,14 +77,14 @@
 <body>
 
   <div class="hero">
-    <img src="nature.jpg" alt="Bus interior">
+    <img src="https://img.freepik.com/free-photo/landscape-morning-fog-mountains-sunrise_335224-793.jpg?uid=R172486067&ga=GA1.1.1369073025.1745566321&semt=ais_hybrid&w=740">
     <div class="text-overlay">
       <div class="logo-style">Peta Tempat Makan</div>
       <h1 class="fade-in-up">Hai kamu, mau ke mana?</h1>
       <p class="fade-in-up">Peta Ini – Siap mengantarmu kemana saja.</p>
 
       <!-- Tombol Masuk -->
-      <a href="materi_webgis" class="btn btn-primary btn-lg mt-5 btn-masuk fade-in-up">Masuk</a>
+      <a href="halamanku.html" class="btn btn-primary btn-lg mt-5 btn-masuk fade-in-up">Masuk</a>
     </div>
   </div>
 
