--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <p class="fade-in-up">Peta Ini – Siap mengantarmu kemana saja.</p>
 
       <!-- Tombol Masuk -->
-      <a href="WEBGIS.html" class="btn btn-primary btn-lg mt-5 btn-masuk fade-in-up">Masuk</a>
+      <a href="materi_webgis.html" class="btn btn-primary btn-lg mt-5 btn-masuk fade-in-up">Masuk</a>
     </div>
   </div>
 
