--- a/materi_webgis.html
+++ b/materi_webgis.html
@@ -310,7 +310,7 @@
 <body>
 
   <div class="hero">
-   <img src="https://img.freepik.com/free-photo/beautiful-tree-middle-field-covered-with-grass-with-tree-line-background_181624-29267.jpg?uid=R172486067&ga=GA1.1.1369073025.1745566321&semt=ais_hybrid&w=740">
+    <img src="img/nature2.jpg" alt="Latar belakang alam" class="bg" />
     <h1 class="main-title">Peta tempat Makanan</h1>
 
     <div class="container-wrapper" id="main-container">
