--- a/materi_webgis.html
+++ b/materi_webgis.html
@@ -310,7 +310,7 @@
 <body>
 
   <div class="hero">
-    <img src="img/nature2.jpg" alt="Latar belakang alam" class="bg" />
+    <img src="nature2.jpg" alt="Latar belakang alam" class="bg" />
     <h1 class="main-title">Peta tempat Makanan</h1>
 
     <div class="container-wrapper" id="main-container">
