--- a/index.html
+++ b/index.html
@@ -9,24 +9,32 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <style>
     html, body {
-      height: 100%;
       margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
     }
+
     .hero {
       position: relative;
-      width: 100%;
+      width: 100vw;
       height: 100vh;
+      min-height: 100vh;
       overflow: hidden;
     }
+
     .hero img {
       position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
       object-fit: cover;
       filter: blur(4px);
       z-index: 1;
     }
-    .hero .text-overlay {
+
+    .text-overlay {
       position: relative;
       z-index: 2;
       height: 100%;
@@ -39,6 +47,7 @@
       padding: 0 1rem;
       padding-bottom: 10vh;
     }
+
     .logo-style {
       font-family: 'Great Vibes', cursive;
       font-size: 4rem;
@@ -51,12 +60,15 @@
       width: 1;
       animation: typing 2s steps(20, end) forwards, blink 0.75s step-end infinite;
     }
+
     @keyframes typing { from { width: 0 } to { width: 17ch } }
     @keyframes blink { 50% { border-color: transparent; } }
+
     @keyframes fadeInUp {
       from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
     }
+
     .fade-in-up {
       animation: fadeInUp 2s ease-out forwards;
     }
@@ -68,23 +80,42 @@
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
       transition: all 0.3s ease-in-out;
     }
+
     .btn-masuk:hover {
       transform: translateY(-3px);
       box-shadow: 0 6px 16px rgba(0, 0, 0, 0.3);
+    }
+
+    /* Responsive font size untuk layar kecil */
+    @media (max-width: 480px) {
+      .logo-style {
+        font-size: 2.5rem;
+      }
+      h1 {
+        font-size: 1.5rem;
+      }
+      p {
+        font-size: 1rem;
+      }
+      .btn-masuk {
+        font-size: 1rem;
+        padding: 0.6rem 1.5rem;
+      }
     }
   </style>
 </head>
 <body>
 
   <div class="hero">
-    <img src="https://img.freepik.com/free-photo/landscape-morning-fog-mountains-sunrise_335224-793.jpg?uid=R172486067&ga=GA1.1.1369073025.1745566321&semt=ais_hybrid&w=740">
+    <img src="https://img.freepik.com/free-photo/landscape-morning-fog-mountains-sunrise_335224-793.jpg?uid=R172486067&ga=GA1.1.1369073025.1745566321&semt=ais_hybrid&w=740" alt="Background Image">
+    
     <div class="text-overlay">
       <div class="logo-style">Peta Tempat Makan</div>
       <h1 class="fade-in-up">Hai kamu, mau ke mana?</h1>
       <p class="fade-in-up">Peta Ini – Siap mengantarmu kemana saja.</p>
 
       <!-- Tombol Masuk -->
-      <a href="materi_webgis.html" class="btn btn-primary btn-lg mt-5 btn-masuk fade-in-up">Masuk</a>
+      <a href="halamanku.html" class="btn btn-primary btn-lg mt-5 btn-masuk fade-in-up">Masuk</a>
     </div>
   </div>
 
